--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
             <div class="inicio-container">
                 <div class="text-container-inicio">
                     <div class="title-container-inicio">
-                        <h1>Creality Tech, Revolucionando o Mercado Digital</h1>
+                        <h1>
+                            <div class="strong">Creality Tech</div>Revolucionando o <div class="market">Mercado Digital
+                            </div>
+                        </h1>
                     </div>
                     <div class="folder-container-inicio">
-                        <p>Aqui você encontra o melhor que seu negócio precisa!</p>
+                        <p>Não entregamos projetos, entregamos qualidade!</p>
                     </div>
                     <div class="button-chamada-inicio">
                         <a id="conhecer-inicio">Conheça-nos</a>
