--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="button-container">
                     <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
-                    <div class="button"><a>BUTTON</a></div>
+                    <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
                     <div class="button"><a>BUTTON</a></div>
                     <div class="button"><a>BUTTON</a></div>
                     <div class="button"><a>BUTTON</a></div>
@@ -39,11 +39,11 @@
                 <div class="menu-mobile">
                     <div class="button-menu">
                         <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
+                        <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
                         <div class="button"><a>BUTTON</a></div>
                         <div class="button"><a>BUTTON</a></div>
                         <div class="button"><a>BUTTON</a></div>
-                        <div class="button"><a>BUTTON</a></div>
-                        
+
                     </div>
 
                 </div>
@@ -62,20 +62,20 @@
                         <p>Não entregamos projetos, entregamos qualidade!</p>
                     </div>
                     <div class="button-chamada-inicio">
-                        <a id="conhecer-inicio">Conheça-nos</a>
+                        <a onclick="filosofia()" id="conhecer-inicio">Conheça-nos</a>
                         <a id="contato-inicio"><i class="bi bi-whatsapp"></i>Entrar em contato</a>
                     </div>
                 </div>
                 <div class="img-container-inicio">
                     <div class="img-transition">
                         <img id="img1"
-                            src="https://asset.mansionglobal.com/editorial/six-cities-six-continents-inside-iconic-home-styles-around-the-world/assets/dCo1VfmllG/sixcities_roundup_lead-2560x1400.jpeg">
+                            src="img/img-site-moldmetais.jpg">
 
                         <img id="img2"
                             src="https://asset.mansionglobal.com/editorial/six-cities-six-continents-inside-iconic-home-styles-around-the-world/assets/dCo1VfmllG/sixcities_roundup_lead-2560x1400.jpeg">
 
                         <img id="img3"
-                            src="https://asset.mansionglobal.com/editorial/six-cities-six-continents-inside-iconic-home-styles-around-the-world/assets/dCo1VfmllG/sixcities_roundup_lead-2560x1400.jpeg">
+                            src="img/img-site-creality.jpg">
                     </div>
                 </div>
             </div>
@@ -117,9 +117,66 @@
                 </div>
             </div>
         </div>
+
+
+        <div id="processo" class="processo-criativo">
+            <div class="container-criativo">
+                <div id="number1" class="container-processo">
+                    <div class="container-number">
+                        <div class="text-processo">
+                            <strong>1 - ENTENDENDO A DOR DO CLIENTE</strong>
+                            <p><strong id="obj">Objetivo:</strong> Primeiro, realizamos uma reunião inicial, seja de
+                                forma presencial ou virtual (via Meet),
+                                conforme a preferência do cliente, para compreender profundamente suas dores e
+                                necessidades.
+                                Nesse momento, buscamos identificar claramente os objetivos que o cliente deseja
+                                alcançar ao
+                                buscar nossos serviços, bem como o nível de crescimento ou transformação que ele almeja
+                                para
+                                o seu negócio. Essa abordagem nos permite alinhar expectativas e traçar um caminho
+                                estratégico personalizado, garantindo que as soluções propostas estejam totalmente
+                                alinhadas
+                                com as aspirações e necessidades do cliente.</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="container-processo">
+                    <div id="number2" class="container-number">
+                        <div class="text-processo">
+                            <div class="title-text">
+                                <h1>COMO FUNCIONA?</h1>
+                            </div>
+                            <strong>2 - ORÇAMENTO E PRÉ-DEFINIÇÃO</strong>
+                            <p><strong id="obj">Objetivo:</strong> Após coletar as informações sobre as necessidades e
+                                objetivos do cliente, começamos a esboçar a proposta que melhor se adapta ao seu
+                                negócio. Em seguida, realizamos uma análise detalhada dos orçamentos, buscando otimizar
+                                custos ao máximo, sem comprometer a qualidade. Nosso objetivo é oferecer ao cliente uma
+                                solução eficiente, com um custo-benefício atrativo, garantindo conforto e satisfação ao
+                                contratar nossos serviços.</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="number3" class="container-processo">
+                    <div class="container-number">
+                        <div class="text-processo">
+                            <strong>3 - ANÁLISE E ENTREGA DO PROJETO</strong>
+                            <p><strong id="obj">Objetivo:</strong> Após a formalização do contrato, realizada
+                                presencialmente ou via Meet, iniciamos a execução do projeto com base no que foi
+                                discutido e alinhado previamente. Nosso compromisso é entregar soluções de alta
+                                qualidade, com um padrão premium, dentro do prazo acordado, para impulsionar o
+                                crescimento e o sucesso do negócio do cliente. E, finalmente, o sistema estará pronto
+                                para um teste, onde o cliente poderá testar e analisar rigorosamente cada detalhe,
+                                garantindo que tudo esteja alinhado com suas expectativas e necessidades antes da
+                                entrega final.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="up">
             <div onclick="nav()" class="up-container">
-                <a onclick="nav()" ><i class="bi bi-chevron-double-up"></i></a>
+                <a onclick="nav()"><i class="bi bi-chevron-double-up"></i></a>
             </div>
         </div>
     </form>
