--- a/index.html
+++ b/index.html
@@ -68,14 +68,12 @@
                 </div>
                 <div class="img-container-inicio">
                     <div class="img-transition">
-                        <img id="img1"
-                            src="img/img-site-moldmetais.jpg">
+                        <img id="img1" src="img/img-site-moldmetais.jpg">
 
                         <img id="img2"
                             src="https://asset.mansionglobal.com/editorial/six-cities-six-continents-inside-iconic-home-styles-around-the-world/assets/dCo1VfmllG/sixcities_roundup_lead-2560x1400.jpeg">
 
-                        <img id="img3"
-                            src="img/img-site-creality.jpg">
+                        <img id="img3" src="img/img-site-creality.jpg">
                     </div>
                 </div>
             </div>
@@ -177,6 +175,63 @@
         <div class="up">
             <div onclick="nav()" class="up-container">
                 <a onclick="nav()"><i class="bi bi-chevron-double-up"></i></a>
+            </div>
+        </div>
+
+        <div class="planos">
+            <div class="planos-container">
+                <div class="plano-content">
+                    <div class="title-plano">
+                        <h1>BÁSICO</h1>
+                    </div>
+                    <div class="text-plano">
+                        <ul>
+                            <li> <i class="bi bi-check2"></i> Site simples, para mostragem da empresa, etc;</li>
+                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
+                            <li> <i class="bi bi-check2"></i> Direito a 2 publicações semanais no instagram;</li>
+                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="plano-content">
+                    <div class="title-plano">
+                        <h1>MÉDIO</h1>
+                    </div>
+                    <div class="text-plano">
+                        <ul>
+                            <li> <i class="bi bi-check2"></i> Site intermediário, onde o cliente terá acesso a edições de informações;</li>
+                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
+                            <li> <i class="bi bi-check2"></i> Direito a 2 publicações no instagram;</li>
+                            <li> <i class="bi bi-check2"></i> Gestão de tráfego de anúncios;</li>
+                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="plano-content">
+                    <div class="title-plano">
+                        <h1>PREMIUM</h1>
+                    </div>
+                    <div class="text-plano">
+                        <ul>
+                            <li> <i class="bi bi-check2"></i> Site de grande porte, usado para fazer vendas diretamente pelo site;</li>
+                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
+                            <li> <i class="bi bi-check2"></i> Direito a 3 publicações no instagram;</li>
+                            <li> <i class="bi bi-check2"></i> Gestão de tráfego de anúncios;</li>
+                            <li> <i class="bi bi-check2"></i> Copy personalizada para anúncios;</li>
+                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="plano-content">
+                    <div class="title-plano">
+                        <h1>PERSONALIZADO</h1>
+                    </div>
+                    <div class="text-plano">
+                        <ul>
+                            <li> <i class="bi bi-check2"></i> Este plano oferece TODOS os nossos serviços conforme o cliente quiser;</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
