--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="button-container">
                     <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
                     <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
-                    <div class="button"><a>BUTTON</a></div>
+                    <div onclick="planos()" class="button"><a>PLANOS</a></div>
                     <div class="button"><a>BUTTON</a></div>
                     <div class="button"><a>BUTTON</a></div>
                 </div>
@@ -40,7 +40,7 @@
                     <div class="button-menu">
                         <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
                         <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
-                        <div class="button"><a>BUTTON</a></div>
+                        <div onclick="planos()" class="button"><a>PLANOS</a></div>
                         <div class="button"><a>BUTTON</a></div>
                         <div class="button"><a>BUTTON</a></div>
 
@@ -63,7 +63,7 @@
                     </div>
                     <div class="button-chamada-inicio">
                         <a onclick="filosofia()" id="conhecer-inicio">Conheça-nos</a>
-                        <a id="contato-inicio"><i class="bi bi-whatsapp"></i>Entrar em contato</a>
+                        <a id="contato-inicio"><i class="bi bi-whatsapp"></i>Comece já</a>
                     </div>
                 </div>
                 <div class="img-container-inicio">
@@ -178,19 +178,42 @@
             </div>
         </div>
 
-        <div class="planos">
+        <div id="planos" class="planos">
+            <div class="title-plano-container">
+                <h1>NOSSOS PLANOS</h1>
+            </div>
             <div class="planos-container">
+                
                 <div class="plano-content">
                     <div class="title-plano">
                         <h1>BÁSICO</h1>
                     </div>
                     <div class="text-plano">
                         <ul>
-                            <li> <i class="bi bi-check2"></i> Site simples, para mostragem da empresa, etc;</li>
-                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
-                            <li> <i class="bi bi-check2"></i> Direito a 2 publicações semanais no instagram;</li>
-                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Site simples, para mostragem da empresa, etc;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Instagram personalizado;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Direito a 2 publicações semanais no instagram;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Domínio personalizado.</div>
+                                </div>
+                            </li>
                         </ul>
+                        <div class="button-plano">
+                            <a>CONTRATAR</a>
+                        </div>
                     </div>
                 </div>
                 <div class="plano-content">
@@ -199,12 +222,35 @@
                     </div>
                     <div class="text-plano">
                         <ul>
-                            <li> <i class="bi bi-check2"></i> Site intermediário, onde o cliente terá acesso a edições de informações;</li>
-                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
-                            <li> <i class="bi bi-check2"></i> Direito a 2 publicações no instagram;</li>
-                            <li> <i class="bi bi-check2"></i> Gestão de tráfego de anúncios;</li>
-                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Site intermediário, onde o cliente terá acesso a edições de informações;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Instagram personalizado;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Direito a 2 publicações no instagram;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Gestão de tráfego de anúncios;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Domínio personalizado.</div>
+                                </div>
+                            </li>
                         </ul>
+                        <div class="button-plano">
+                            <a>CONTRATAR</a>
+                        </div>
                     </div>
                 </div>
                 <div class="plano-content">
@@ -213,13 +259,40 @@
                     </div>
                     <div class="text-plano">
                         <ul>
-                            <li> <i class="bi bi-check2"></i> Site de grande porte, usado para fazer vendas diretamente pelo site;</li>
-                            <li> <i class="bi bi-check2"></i> Instagram personalizado;</li>
-                            <li> <i class="bi bi-check2"></i> Direito a 3 publicações no instagram;</li>
-                            <li> <i class="bi bi-check2"></i> Gestão de tráfego de anúncios;</li>
-                            <li> <i class="bi bi-check2"></i> Copy personalizada para anúncios;</li>
-                            <li> <i class="bi bi-check2"></i> Domínio personalizado.</li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Site de grande porte, usado para fazer vendas diretamente pelo site;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Instagram personalizado;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Direito a 3 publicações no instagram;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Gestão de tráfego de anúncios;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Copy personalizada para anúncios;</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Domínio personalizado.</div>
+                                </div>
+                            </li>
                         </ul>
+                        <div class="button-plano">
+                            <a>CONTRATAR</a>
+                        </div>
                     </div>
                 </div>
                 <div class="plano-content">
@@ -228,8 +301,15 @@
                     </div>
                     <div class="text-plano">
                         <ul>
-                            <li> <i class="bi bi-check2"></i> Este plano oferece TODOS os nossos serviços conforme o cliente quiser;</li>
+                            <li>
+                                <div class="text-plano-content"><i class="bi bi-check2"></i>
+                                    <div>Este plano oferece TODOS os nossos serviços conforme o cliente quiser.</div>
+                                </div>
+                            </li>
                         </ul>
+                        <div class="button-plano">
+                            <a>CONTRATAR</a>
+                        </div>
                     </div>
                 </div>
             </div>
