--- a/index.html
+++ b/index.html
@@ -178,146 +178,36 @@
             </div>
         </div>
 
-        <div id="planos" class="planos">
-            <div class="title-plano-container">
-                <h1>NOSSOS PLANOS</h1>
-            </div>
-            <div class="planos-container">
-                
-                <div class="plano-content">
-                    <div class="title-plano">
-                        <h1>BÁSICO</h1>
+        <div class="pages">
+            <div class="slider">
+                <div class="slides">
+                    <div class="slide">
+                        <img src="img/img-site-moldmetais.jpg" alt="Slide 1">
+
+
+
                     </div>
-                    <div class="text-plano">
-                        <ul>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Site simples, para mostragem da empresa, etc;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Instagram personalizado;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Direito a 2 publicações semanais no instagram;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Domínio personalizado.</div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="button-plano">
-                            <a>CONTRATAR</a>
-                        </div>
+                    <div class="slide">
+                        <img src="img/img-site-moldmetais.jpg" alt="Slide 2">
+
+                    </div>
+                    <div class="slide">
+                        <img src="img/img-site-moldmetais.jpg" alt="Slide 3">
+
                     </div>
                 </div>
-                <div class="plano-content">
-                    <div class="title-plano">
-                        <h1>MÉDIO</h1>
-                    </div>
-                    <div class="text-plano">
-                        <ul>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Site intermediário, onde o cliente terá acesso a edições de informações;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Instagram personalizado;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Direito a 2 publicações no instagram;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Gestão de tráfego de anúncios;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Domínio personalizado.</div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="button-plano">
-                            <a>CONTRATAR</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="plano-content">
-                    <div class="title-plano">
-                        <h1>PREMIUM</h1>
-                    </div>
-                    <div class="text-plano">
-                        <ul>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Site de grande porte, usado para fazer vendas diretamente pelo site;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Instagram personalizado;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Direito a 3 publicações no instagram;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Gestão de tráfego de anúncios;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Copy personalizada para anúncios;</div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Domínio personalizado.</div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="button-plano">
-                            <a>CONTRATAR</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="plano-content">
-                    <div class="title-plano">
-                        <h1>PERSONALIZADO</h1>
-                    </div>
-                    <div class="text-plano">
-                        <ul>
-                            <li>
-                                <div class="text-plano-content"><i class="bi bi-check2"></i>
-                                    <div>Este plano oferece TODOS os nossos serviços conforme o cliente quiser.</div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="button-plano">
-                            <a>CONTRATAR</a>
-                        </div>
-                    </div>
+                <div class="controls">
+                    <div class="prev">&#10094;</div>
+                    <div class="next">&#10095;</div>
                 </div>
             </div>
         </div>
+        
     </form>
 </body>
 <script src="script/menu.js"></script>
 <script src="script/animation.js"></script>
 <script src="script/href.js"></script>
+<script src="script/slider.js"></script>
 
 </html>
