--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="button-container">
                     <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
                     <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
-                    <div onclick="planos()" class="button"><a>PLANOS</a></div>
+                    <div onclick="servicos()" class="button"><a>SERVIÇOS</a></div>
                     <div class="button"><a>BUTTON</a></div>
                     <div class="button"><a>BUTTON</a></div>
                 </div>
@@ -40,7 +40,7 @@
                     <div class="button-menu">
                         <div onclick="filosofia()" class="button"><a>FILOSOFIA</a></div>
                         <div onclick="processo()" class="button"><a>PROCESSO CRIATIVO</a></div>
-                        <div onclick="planos()" class="button"><a>PLANOS</a></div>
+                        <div onclick="servicos()" class="button"><a>SERVIÇOS</a></div>
                         <div class="button"><a>BUTTON</a></div>
                         <div class="button"><a>BUTTON</a></div>
 
@@ -178,11 +178,11 @@
             </div>
         </div>
 
-        <div class="pages">
+        <div id="container-slide" class="container-slide">
             <div class="slider">
                 <div class="slides">
                     <div class="slide">
-                        <img src="img/img-site-moldmetais.jpg" alt="Slide 1">
+                        <img src="img/img-site-creality.jpg" alt="Slide 1">
 
 
 
@@ -192,7 +192,7 @@
 
                     </div>
                     <div class="slide">
-                        <img src="img/img-site-moldmetais.jpg" alt="Slide 3">
+                        <img src="img/img-site-creality.jpg" alt="Slide 3">
 
                     </div>
                 </div>
@@ -202,7 +202,90 @@
                 </div>
             </div>
         </div>
-        
+
+        <div class="servicos">
+            <h1 id="title-container-servico">NOSSOS SERVIÇOS</h1>
+            <div class="container-servicos">
+                <div id="servico1" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>SITES/SISTEMAS</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <i class="bi bi-globe2"></i>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Construção de sites ou sistemas personalizados e únicos para que atenda todos os quesitos
+                            do cliente.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
+                <div id="servico2" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>PÁGINA DE INSTAGRAM</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <i class="bi bi-instagram"></i>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Criação de uma página para o instagram totalmente personalizada de acordo com a
+                            finalidade do cliente.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
+                <div id="servico3" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>DOMÍNIOS ÚNICOS</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <h2>www.seu-domínio.com.br</h2>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Busca por domínio personalizado, onde poderá ser implementado no serviço de e-mail ou no
+                            link do seu site personalizado.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
+                <div id="servico4" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>E-MAILS PROFISSIONAIS</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <i class="bi bi-envelope"></i>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Criação de um e-mail profissional e de alta qualidade, para que o cliente não se estresse
+                            com falta de armazenamento ou lentidão de envio de e-mails.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
+                <div id="servico5" class="servico-content">
+                    <div class="title-content-servico">
+                        <h1>ANÚNCIOS</h1>
+                    </div>
+                    <div class="icon-content-servico">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-google"></i>
+                        <i class="bi bi-instagram"></i>
+                    </div>
+                    <div class="text-content-servico">
+                        <label>Gestão de anúncios, onde nós cuidamos da parte de tráfego de anúncios na internet,
+                            trazendo assim, mais engajamento.</label>
+                    </div>
+                    <div class="button-content-servico">
+                        <a>CONTRATAR</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </form>
 </body>
 <script src="script/menu.js"></script>
